exports[`ContextMenu renders custom width 1`] = `
<div
  className="ax-context-box ax-context-box--top-middle"
  style={
    Object {
      "width": "20rem",
    }
  }>
  <ul
    className="ax-context-menu">
    <li
      className="ax-context-menu__item">
      <a
        className="ax-context-menu__item-link">
        Lorem ipsum
      </a>
    </li>
  </ul>
</div>
`;

exports[`ContextMenu renders with defaultProps 1`] = `
<div
  className="ax-context-box ax-context-box--top-middle"
  style={
    Object {
      "width": "14.5rem",
    }
  }>
  <ul
    className="ax-context-menu">
    <li
      className="ax-context-menu__item">
      <a
        className="ax-context-menu__item-link">
        Lorem ipsum
      </a>
    </li>
  </ul>
</div>
`;
